[gd_scene load_steps=4 format=3 uid="uid://cgegbpvapohlb"]

[ext_resource type="Script" uid="uid://bracfa6a5uvps" path="res://Micro_Simulation/Agent/agent.gd" id="1_k18j1"]
[ext_resource type="Texture2D" uid="uid://uw2f5l35sl3t" path="res://Micro_Simulation/Agent/Agent_Sprite.png" id="2_wo0w1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wo0w1"]
size = Vector2(12, 13)

[node name="Agent" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_k18j1")

[node name="AgentSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_wo0w1")

[node name="Move_Timer" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_wo0w1")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Move_Timer" to="." method="_on_move_timer_timeout"]
